# nova-luna-tile-solver

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
nova-luna-backend/: Cargo.toml
nova-luna-backend/src/: main.rs
nova-luna-cli/: Cargo.toml
nova-luna-cli/src/: main.rs
nova-luna-gui/: .angulardoc.json  Cargo.toml  README.md  angular.json  index.html  index.scss  karma.conf.js  package-lock.json  package.json  tailwind.config.js
nova-luna-gui/src/: index.html  main.rs
nova-luna-gui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  tile-bg-color.pipe.spec.ts  tile-bg-color.pipe.ts
nova-luna-gui/src/app/game-board/: game-board.component.html  game-board.component.ts
nova-luna-gui/src/app/shared/: game-board-field.ts  game-board.service.spec.ts  game-board.service.ts  played-tile.ts  task.ts  tile.ts
nova-luna-gui/src/app/task/: task.component.html  task.component.ts
nova-luna-gui/src/app/tile/: tile.component.html  tile.component.spec.ts  tile.component.ts
nova-luna-gui/src/components/: app.rs  game_board.rs  mod.rs
nova-luna-gui/src/model/: mod.rs  nova_luna.rs
nova-luna-gui/static/: board.json
nova-luna-solver/: Cargo.toml
nova-luna-solver/src/: lib.rs  nova_luna.rs  solver.rs
resources/: tiles.json
src/: lib.rs  main.rs  nova_luna.rs  solver.rs
